@@ -11,6 +11,7 @@ nvpy (2.0.0-1) unstable; urgency=medium
   * Use /usr/bin/python3 to launch script
   * Change section to utils: does not depend on non-free software
   * Use new start-nvpy.py script to launch
+  * Remove unused files in from nvpy/icons
 
  -- Stefan van der Walt <stefanv@berkeley.edu>  Thu, 19 Sep 2019 16:31:56 -0700
 
